--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
-<h1>
-  <header>
+<!DOCTYPE html>
+<meta charset="UTF-8">
+<head>
+  <title>
     Matteus Guerra
-  </header>
-</h1>
+  </title>
+</head>
+<body>
+  
+</body>
